tests/baselines/reference/collisionExportsRequireAndFunction.errors.txt
collisionExportsRequireAndFunction.ts(1,17): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
collisionExportsRequireAndFunction.ts(4,17): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
collisionExportsRequireAndFunction.ts(7,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
collisionExportsRequireAndFunction.ts(15,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== collisionExportsRequireAndFunction.ts (4 errors) ====
    export function exports() {
                    ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
        return 1;
    }
    export function require() {
                    ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
        return "require";
    }
    module m1 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        function exports() {
            return 1;
        }
        function require() {
            return "require";
        }
    }
    module m2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export function exports() {
            return 1;
        }
        export function require() {
            return "require";
        }
    }